--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "sonarlint.connectedMode.project": {
-        "connectionId": "http://sonar.tsn.local",
+        "connectionId": "http-sonar-tsn-local",
         "projectKey": "angular-chapter8"
     }
 }
